force-app/main/default/objects/Case_Management__c/fields/Admission__c.field-meta.xml
<CustomField>
    <fullName>Admission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Admission</label>
    <referenceTo>Patient_Admission__c</referenceTo>
    <relationshipLabel>Case Managements</relationshipLabel>
    <relationshipName>Case_Managements</relationshipName>
    <type>Lookup</type>
</CustomField>