force-app/main/default/objects/Case_Management__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <formula>Admission__r.Credible_County__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>County</label>
    <type>Text</type>
</CustomField>