force-app/main/default/objects/Case_Management__c/fields/Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up__c</fullName>
    <label>Follow Up</label>
    <type>Date</type>
</CustomField>