force-app/main/default/objects/Case_Management__c/fields/IRP_Date_c__c.field-meta.xml
<CustomField>
    <fullName>IRP_Date_c__c</fullName>
    <label>IRP Date</label>
    <type>Date</type>
</CustomField>