force-app/main/default/objects/Case_Management__c/fields/Peer_Type__c.field-meta.xml
<CustomField>
    <fullName>Peer_Type__c</fullName>
    <formula>Admission__r.Credible_Peer_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Peer Type</label>
    <type>Text</type>
</CustomField>