force-app/main/default/objects/Case_Management__c/fields/Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source__c</fullName>
    <formula>Admission__r.Source__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Source</label>
    <type>Text</type>
</CustomField>